--- a/index.html
+++ b/index.html
@@ -1,111 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mazen | Web Developer</title>
-
-<style>
-*{box-sizing:border-box;margin:0;padding:0}
-
-body{
-  min-height:100vh;
-  font-family:Arial, Helvetica, sans-serif;
-  background: linear-gradient(120deg,#ff8cc6,#ffb3da,#c7f1ff,#8adfff);
-  color:white;
-}
-
-header{
-  padding:40px 20px;
-  text-align:center;
-}
-
-header h1{
-  font-size:48px;
-  margin-bottom:10px;
-}
-
-header p{
-  opacity:.9;
-  font-size:18px;
-}
-
-.container{
-  max-width:1000px;
-  margin:auto;
-  padding:20px;
-}
-
-.card{
-  background:rgba(255,255,255,0.15);
-  backdrop-filter: blur(10px);
-  border-radius:20px;
-  padding:25px;
-  margin:20px 0;
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
-}
-
-h2{
-  margin-bottom:15px;
-}
-
-.skills{
-  display:flex;
-  flex-wrap:wrap;
-  gap:10px;
-}
-
-.skill{
-  background:rgba(255,255,255,.25);
-  padding:8px 14px;
-  border-radius:999px;
-  font-size:14px;
-}
-
-.projects{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:15px;
-}
-
-.project{
-  background:rgba(255,255,255,.2);
-  padding:18px;
-  border-radius:16px;
-  transition:.25s;
-}
-
-.project:hover{
-  transform:translateY(-5px) scale(1.02);
-  background:rgba(255,255,255,.28);
-}
-
-button{
-  background:white;
-  color:#ff6fb0;
-  border:none;
-  padding:12px 22px;
-  border-radius:999px;
-  font-weight:bold;
-  cursor:pointer;
-  transition:.25s;
-}
-
-button:hover{
-  transform:scale(1.05);
-  box-shadow:0 5px 15px rgba(0,0,0,.2);
-  color: #00c3ff;
-}
-
-footer{
-  text-align:center;
-  padding:30px 10px 40px;
-  opacity:.8;
-  font-size:14px;
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mazen | Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
 <header>
